Revision history for Map-Metro-Plugin-Map-Gothenburg

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]

 [Enhancements]

 [Meta]

 [New Features]

 [Revision]

0.1000 2015-01-03T23:47:09Z CET
 - Initial release
