@@ -31,26 +31,35 @@
       },
       "develop" : {
          "requires" : {
-            "Test::EOL" : "0",
-            "Test::More" : "0",
-            "Test::NoTabs" : "0",
             "Test::Pod" : "1.41"
          }
       },
       "runtime" : {
          "requires" : {
-            "Map::Metro" : "0.1900",
+            "Map::Metro" : "0.2206",
             "Moose::Role" : "2.0000",
             "perl" : "5.014000"
          }
-      },
-      "test" : {
-         "requires" : {
-            "Test::NoTabs" : "0"
-         }
+      }
+   },
+   "provides" : {
+      "Map::Metro::Plugin::Map::Gothenburg" : {
+         "file" : "lib/Map/Metro/Plugin/Map/Gothenburg.pm",
+         "version" : "0.1001"
       }
    },
    "release_status" : "stable",
-   "version" : "0.1000"
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/Csson/p5-Map-Metro-Gothenburg/issues"
+      },
+      "homepage" : "https://metacpan.org/release/Map-Metro-Plugin-Map-Gothenburg",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/Csson/p5-Map-Metro-Gothenburg.git",
+         "web" : "https://github.com/Csson/p5-Map-Metro-Gothenburg"
+      }
+   },
+   "version" : "0.1001"
 }
 
