@@ -1,8 +1,4 @@
 requires 'perl', '5.014000';
 
 requires 'Moose::Role', '2.0000';
-requires 'Map::Metro', '0.1900';
-
-on 'test' => sub {
-    requires 'Test::NoTabs';
-};
+requires 'Map::Metro', '0.2206';
