@@ -1,13 +1,17 @@
-name = Map-Metro-Plugin-Map-Gothenburg
+; This file was auto-generated 2015-01-20 14:17:01
+
 author = Erik Carlsson <info@code301.com>
+copyright_holder = Erik Carlsson <info@code301.com>
 license = Perl_5
-copyright_holder = Erik Carlsson
+name = Map-Metro-Plugin-Map-Gothenburg
 
 [Git::GatherDir]
-exclude_filename = Build.PL
 exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
+exclude_filename = iller.ini
+exclude_filename = Build.PL
+exclude_match = \.png
 
 [CopyFilesFromBuild]
 copy = META.json
@@ -17,34 +21,40 @@ copy = Build.PL
 [ReversionOnRelease]
 prompt = 1
 
-[MapMetro::MakeGraphViz]
-
 [OurPkgVersion]
-die_on_existing_version = 1
-die_on_line_insertion = 1
+
+[PodnameFromClassname]
 
 [NextRelease]
 format = %v  %{yyyy-MM-dd HH:mm:ss VVV}d
 
 [PreviousVersion::Changelog]
+
 [NextVersion::Semantic]
+format = %d.%02d%02d
 major = 
 minor = API Changes, New Features, Enhancements
-revision = Revision, Bug Fixes, Documentation, Meta
-format = %d.%02d%02d
 numify_version = 0
+revision = Revision, Bug Fixes, Documentation, Meta
 
 [Git::Check]
 allow_dirty = dist.ini
 allow_dirty = Changes
 allow_dirty = META.json
 allow_dirty = README.md
+allow_dirty = README
 allow_dirty = Build.PL
 
-[ReadmeAnyFromPod]
+[GithubMeta]
+homepage = https://metacpan.org/release/Map-Metro-Plugin-Map-Gothenburg
+issues = 1
+
+[ReadmeAnyFromPod / Pod]
 filename = README.md
-type = markdown
 location = root
+type = markdown
+
+[Readme]
 
 [MetaNoIndex]
 directory = t
@@ -60,11 +70,12 @@ directory = examples
 
 [MetaJSON]
 
+[MetaProvides::Class]
+
+[MetaProvides::Package]
+
 [ContributorsFromGit]
 
-[Test::NoTabs]
-[Test::EOL]
-[Test::EOF]
 [PodSyntaxTests]
 
 [MetaYAML]
@@ -74,6 +85,8 @@ directory = examples
 [ExtraTests]
 
 [ShareDir]
+
+[ExecDir]
 
 [Manifest]
 
@@ -87,17 +100,14 @@ directory = examples
 
 [UploadToCPAN]
 
-[Git::Commit]
-commit_msg = %v
-allow_dirty = dist.ini
-allow_dirty = Changes
-allow_dirty = META.json
-allow_dirty = README.md
-allow_dirty = Build.PL
-
 [Git::Tag]
 tag_format = %v
-tag_message =
+tag_message = 
 
 [Git::Push]
-remotes_must_exist = 0
+remotes_must_exist = 1
+
+[MapMetro::MakeGraphViz]
+
+[MapMetro::MakeLinePod]
+
