@@ -1,0 +1,19 @@
+name = Map-Metro-Plugin-Map-Gothenburg
+author = Erik Carlsson <info@code301.com>
+license = Perl_5
+copyright_holder = Erik Carlsson <info@code301.com>
+
+[@Author::CSSON]
+is_private = 0
+
+Git::GatherDir.exclude_match = \.png
+
+NextVersion::Semantic.major =
+NextVersion::Semantic.minor = API Changes, New Features, Enhancements
+NextVersion::Semantic.revision = Revision, Bug Fixes, Documentation, Meta
+NextVersion::Semantic.format = %d.%02d%02d
+NextVersion::Semantic.numify_version = 0
+
+[MapMetro::MakeGraphViz]
+
+[MapMetro::MakeLinePod]
